Test/Nat/Max.expected
goal: x ≤ max' x y ∧ y ≤ max' x y

query:
(define-sort Nat () Int)
(declare-fun |Nat.max'| (Nat Nat) Nat)
(assert (forall ((_uniq.217 Nat)) (=> (>= _uniq.217 0) (forall ((_uniq.218 Nat)) (=> (>= _uniq.218 0) (>= (|Nat.max'| _uniq.217 _uniq.218) 0))))))
(declare-const y Nat)
(assert (>= y 0))
(declare-const x Nat)
(assert (>= x 0))
(assert (not (and (<= x (|Nat.max'| x y)) (<= y (|Nat.max'| x y)))))
(check-sat)

result: unknown
Test/Nat/Max.lean:12:2: error: unable to prove goal
goal: x ≤ max' x y ∧ y ≤ max' x y

query:
(define-sort Nat () Int)
(define-fun |Nat.max'| ((x Nat) (y Nat)) Nat (ite (<= x y) y x))
(assert (forall ((_uniq.257 Nat)) (=> (>= _uniq.257 0) (forall ((_uniq.258 Nat)) (=> (>= _uniq.258 0) (>= (|Nat.max'| _uniq.257 _uniq.258) 0))))))
(declare-const x Nat)
(assert (>= x 0))
(declare-const y Nat)
(assert (>= y 0))
(assert (not (and (<= x (|Nat.max'| x y)) (<= y (|Nat.max'| x y)))))
(check-sat)

result: unsat
failed to reconstruct proof: operator does not have function type
